compiler/src/snapshots/compiler__parser__tests__conditional_snapshots@unless_else_if.snap
---
source: compiler/src/parser.rs
expression: "parse_expr_err(\"unless true { } else if false {}\")"
---
UnlessElseIfClause {
    source: NamedSource {
        name: "<test>",
        content: "fn main() -> void { unless true { } else if false {} }",
    },
    range: 36..40,
}
