compiler/src/snapshots/compiler__parser__tests__function_definition_snapshots@empty.snap
---
source: compiler/src/parser.rs
expression: "parse(\"fn main() -> void {}\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private,
            ),
            external: false,
            name: Identifier {
                name: "main",
            },
            parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                },
            ),
            block: Block {
                statements: [],
            },
        },
    ),
]
