compiler/src/snapshots/compiler__parser__tests__function_definition_snapshots@external_body.snap
---
source: compiler/src/parser.rs
expression: "parse_err(\"fn external main() -> void {}\")"
---
ExternalFunctionBody {
    source: NamedSource {
        name: "<test>",
        content: "fn external main() -> void {}",
    },
    range: 27..28,
}
