compiler/src/snapshots/compiler__parser__tests__function_definition_snapshots@parameter.snap
---
source: compiler/src/parser.rs
expression: "parse(\"fn main(argc: u8) -> void { }\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private,
            ),
            external: false,
            name: Identifier {
                name: "main",
            },
            parameters: [
                Parameter {
                    name: Identifier {
                        name: "argc",
                    },
                    param_type: Scalar(
                        ScalarType {
                            name: "u8",
                        },
                    ),
                },
            ],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                },
            ),
            block: Block {
                statements: [],
            },
        },
    ),
]
